apps/production/maintainerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: maintainerr
  name: maintainerr
spec:
  ports:
    - name: http
      port: 6246
      targetPort: 6246
  selector:
    io.kompose.service: maintainerr
