apps/production/maintainerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  labels:
    app: maintainerr
  name: maintainerr
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: maintainerr.basingse.ca
    http:
      paths:
      - backend:
          service:
            name: maintainerr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - maintainerr.basingse.ca
    secretName: maintainerr-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 192.168.2.11
